force-app/main/default/objects/Demo_Feature__c/Demo_Feature__c.object-meta.xml
<CustomObject>
    <description>Features selected for the demo</description>
    <label>Demo Feature</label>
    <nameField>
        <label>Demo Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>