force-app/main/default/objects/Demo_Feature__c/fields/Demo_Org__c.field-meta.xml
<CustomField>
    <fullName>Demo_Org__c</fullName>
    <label>Demo Org</label>
    <referenceTo>Demo_Org__c</referenceTo>
    <relationshipLabel>Demo Features</relationshipLabel>
    <relationshipName>Demo_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>