force-app/main/default/objects/Demo_Feature__c/fields/Demo_Product__c.field-meta.xml
<CustomField>
    <fullName>Demo_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Product</label>
    <referenceTo>Demo_Product__c</referenceTo>
    <relationshipLabel>Demo Features</relationshipLabel>
    <relationshipName>Demo_Features</relationshipName>
    <type>Lookup</type>
</CustomField>