force-app/main/default/objects/Demo_Feature__c/fields/Instruction_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Line_2__c</fullName>
    <label>Instruction Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>