force-app/main/default/objects/Demo_Feature__c/fields/Instruction_Line_2_Completed__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Line_2_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instruction Line 2 Completed</label>
    <type>Checkbox</type>
</CustomField>